--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,3 +17,5 @@
         </main>
     </body>
 </html>
+
+{# $annonces = $connexion->query('SELECT * FROM annonce ORDER BY prix DESC')->fetchAll(PDO::FETCH_ASSOC); #}
